# module_ffmpegcmd

./: .gitignore  README.md  README_full.md  README_mini.md  README_v4.4.2.md  README_v4.4.2_mini.md  README_v5.1.1.md  README_v5.1.1_mini.md  build.gradle  local.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/libs/: lib_ffmpegcmd_v4.4.2_mini_release_20220917.aar  lib_ffmpegcmd_v4.4.2_mini_release_20220919.aar  lib_ffmpegcmd_v4.4.2_mini_release_20221031.aar  lib_ffmpegcmd_v4.4.3_mini_release_20221028.aar  lib_ffmpegcmd_v4.4.3_mini_release_20221031.aar  lib_ffmpegcmd_v4.4.3_mini_release_20231017.aar  lib_ffmpegcmd_v4.4.4_mini_release_20231017.aar  lib_ffmpegcmd_v5.1.1_mini_release_20220917.aar  lib_ffmpegcmd_v5.1.1_mini_release_20221031.aar  lib_ffmpegcmd_v5.1.1_release_20220915.aar  lib_ffmpegcmd_v5.1.1_release_20221031.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/: a10.aac  xiri.pcm  新建文本文档.txt
app/src/main/java/com/kalu/ffmpeg/: App.java  (+5 more)
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: styles.xml
gradle/wrapper/: gradle-wrapper.properties
lib_cpu_features/: build.gradle
lib_cpu_features/src/main/: AndroidManifest.xml
lib_ffmpegcmd/: build.gradle
lib_ffmpegcmd/src/main/cpp/: CMakeLists.txt  ffmpeg-core.h  ffmpeg_abidetect.c  ffmpeg_abidetect.h  ffprobe-core.h
lib_ffmpegcmd_audio_v4.4/: build.gradle
lib_ffmpegcmd_audio_v4.4-dev-3015-gc0d0b1c4f6/: build.gradle
lib_ffmpegcmd_audio_v4.4-dev-3015-gc0d0b1c4f6/src/main/cpp/: CMakeLists.txt  ffmpeg-core.c
lib_ffmpegcmd_audio_v4.4/src/main/cpp/: CMakeLists.txt  ffmpeg-core.c  ffmpeg-core.h  ffprobe-core.c  ffprobe-core.h  fftools_cmdutils.c  fftools_ffmpeg.c  fftools_ffprobe.c
lib_ffmpegcmd_audio_v4.4/src/main/cpp/ffmpeg/include/: config.h
lib_ffmpegcmd_audio_v4.4_mini/: build.gradle
lib_ffmpegcmd_audio_v4.4_mini/src/main/: AndroidManifest.xml
lib_ffmpegcmd_audio_v4.4_mini/src/main/cpp/: CMakeLists.txt  fftools_ffmpeg.c  fftools_ffprobe.c
lib_ffmpegcmd_audio_v4.4_mini/src/main/cpp/ffmpeg/include/: config.h
lib_ffmpegcmd_full_v4.4/: build.gradle
lib_ffmpegcmd_full_v4.4/src/main/cpp/: ffmpeg-core.c  ffmpeg_progress.c
lib_ffmpegcmd_standard_v4.4.1/: build.gradle
lib_ffmpegcmd_standard_v4.4.1/src/main/cpp/: CMakeLists.txt  ffmpeg-core.c  ffmpeg_progress.h  fftools_ffmpeg.c
lib_ffmpegcmd_standard_v4.4.1/src/main/cpp/ffmpeg/include/: config.h
lib_ffmpegcmd_standard_v4.4.1/src/main/cpp/ffmpeg/include/libavutil/: ffversion.h
lib_ffmpegcmd_v4.4.2/: build.gradle
lib_ffmpegcmd_v4.4.2/src/main/cpp/: CMakeLists.txt
lib_ffmpegcmd_v4.4.2/src/main/cpp/include/armeabi-v7a/: config.h
lib_ffmpegcmd_v4.4.2_mini/: build.gradle  proguard-rules.pro
lib_ffmpegcmd_v4.4.2_mini/src/main/cpp/: CMakeLists.txt
lib_ffmpegcmd_v4.4.2_mini/src/main/cpp/ffmpegcmd/: api_cmd.h  api_version.c  cmdutils.c  cmdutils.h  ffmpeg.c  ffmpeg.h
lib_ffmpegcmd_v4.4.2_mini/src/main/cpp/include/armeabi-v7a/: config.h
lib_ffmpegcmd_v4.4.2_mini/src/main/cpp/include/libavcodec/: mathops.h
lib_ffmpegcmd_v4.4.2_mini/src/main/cpp/include/libavformat/: os_support.h
lib_ffmpegcmd_v4.4.2_mini/src/main/cpp/include/libavutil/: internal.h  libm.h  thread.h
lib_ffmpegcmd_v4.4.3_lite/: build.gradle
lib_ffmpegcmd_v4.4.3_lite/src/main/cpp/config/arm64-v8a/: config.h
lib_ffmpegcmd_v4.4.3_lite/src/main/cpp/ffmpegcmd/: api_execute.c  cmdutils.c  cmdutils.h
lib_ffmpegcmd_v4.4.3_lite/src/main/cpp/include/libavutil/: internal.h
lib_ffmpegcmd_v4.4.3_mini/: build.gradle
lib_ffmpegcmd_v4.4.3_mini/src/main/cpp/: CMakeLists.txt
lib_ffmpegcmd_v4.4.3_mini/src/main/cpp/cmd/: api_version.c
lib_ffmpegcmd_v4.4.3_mini/src/main/cpp/config/armeabi-v7a/: config.h
lib_ffmpegcmd_v4.4.3_mini/src/main/cpp/ffmpegcmd/: api_cmd.c  api_main.c  api_main.h  cmdutils.c  ffmpeg.c  ffmpeg.h
lib_ffmpegcmd_v4.4.4_full/: build.gradle  consumer-rules.pro
lib_ffmpegcmd_v4.4.4_full/src/main/cpp/: CMakeLists.txt
lib_ffmpegcmd_v4.4.4_full/src/main/cpp/cmd/: ffmpeg_filter.c
lib_ffmpegcmd_v4.4.4_full/src/main/cpp/ffmpeg/arm64-v8a/include/: config.h
lib_ffmpegcmd_v4.4.4_full/src/main/cpp/ffmpeg/armeabi-v7a/include/: config.h
lib_ffmpegcmd_v4.4.4_full/src/main/cpp/ffmpeg/x86/include/: config.h
lib_ffmpegcmd_v4.4.4_full/src/main/cpp/ffmpeg/x86_64/include/: config.h
lib_ffmpegcmd_v4.4.4_lite/: build.gradle
lib_ffmpegcmd_v4.4.4_lite/src/main/cpp/cmd/: ffmpeg_hw.c  ffmpeg_opt.c
lib_ffmpegcmd_v4.4.4_mini/: build.gradle
lib_ffmpegcmd_v4.4.4_mini/src/main/cpp/: CMakeLists.txt
lib_ffmpegcmd_v4.4.4_mini/src/main/cpp/cmd/: api_cmd.c  api_execute.c  cmdutils.c  ffmpeg.c
lib_ffmpegcmd_v4.4.4_mini/src/main/cpp/ffmpeg/arm64-v8a/include/: config.h
lib_ffmpegcmd_v4.4.4_mini/src/main/cpp/ffmpeg/armeabi-v7a/include/: config.h
lib_ffmpegcmd_v4.4.4_mini/src/main/cpp/ffmpeg/x86/include/: config.h
lib_ffmpegcmd_v4.4.4_mini/src/main/cpp/ffmpeg/x86_64/include/: config.h
lib_ffmpegcmd_v4.4_audio/: build.gradle
lib_ffmpegcmd_v4.4_audio/src/main/cpp/: CMakeLists.txt  ffmpeg-core.h  ffmpeg_progress.c  ffprobe-core.c
lib_ffmpegcmd_v4.4_full/: build.gradle
lib_ffmpegcmd_v4.4_full/src/main/cpp/: ffmpeg-core.c
lib_ffmpegcmd_v5.1.1/: build.gradle
lib_ffmpegcmd_v5.1.1/src/main/: AndroidManifest.xml
lib_ffmpegcmd_v5.1.1/src/main/cpp/: CMakeLists.txt
lib_ffmpegcmd_v5.1.1/src/main/cpp/ffmpegcmd/: api_cmd.c  api_cmd.h  api_main.c  api_main.h  cmdutils.c  ffmpeg.c
lib_ffmpegcmd_v5.1.1_mini/: build.gradle
lib_ffmpegcmd_v5.1.1_mini/src/main/cpp/: CMakeLists.txt
lib_ffmpegcmd_v5.1.1_mini/src/main/cpp/ffmpegcmd/: api_main.h
repo/: build_android_arm64_v8a.sh  build_android_x86.sh  build_android_x86_64.sh  build_full.sh  build_mini.sh  lib_ffmpegcmd_v4.4.4_mini_release_20231025.aar  lib_ffmpegcmd_v4.4.4_mini_release_20231103.aar
repo/full/: build_android_arm64_v8a.sh  build_android_armeabi_v7a.sh  build_android_x86.sh  build_android_x86_64.sh  build_full.sh  build_lite.sh  build_mini.sh
repo/mini/: build_android_armeabi_v7a.sh  build_android_x86.sh  build_android_x86_64.sh  build_mini.sh
(+140 files in other folders)
